--- a/PackageInstaller/PackageInstaller/App.xaml
+++ b/PackageInstaller/PackageInstaller/App.xaml
@@ -2,15 +2,26 @@
     x:Class="PackageInstaller.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:PackageInstaller"
-    xmlns:hosting="using:CommunityToolkit.Extensions.Hosting">
+    xmlns:hosting="using:CommunityToolkit.Extensions.Hosting"
+    xmlns:local="using:PackageInstaller">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
-                <!-- Other merged dictionaries here -->
+                <ResourceDictionary>
+                    <SolidColorBrush x:Key="WindowCaptionBackground">
+                        <ThemeResource ResourceKey="ApplicationPageBackgroundThemeBrush" />
+                    </SolidColorBrush>
+                    <SolidColorBrush x:Key="WindowCaptionBackgroundDisabled">
+                        <ThemeResource ResourceKey="ApplicationPageBackgroundThemeBrush" />
+                    </SolidColorBrush>
+                    <SolidColorBrush x:Key="WindowCaptionForeground">
+                        <ThemeResource ResourceKey="ApplicationHeaderForegroundThemeBrush" />
+                    </SolidColorBrush>
+                </ResourceDictionary>
+                <!--  Other merged dictionaries here  -->
             </ResourceDictionary.MergedDictionaries>
-            <!-- Other app resources here -->
+            <!--  Other app resources here  -->
         </ResourceDictionary>
     </Application.Resources>
 </hosting:CancelableApplication>
