--- a/PackageInstaller/PackageInstaller/Pages/Preparation.xaml
+++ b/PackageInstaller/PackageInstaller/Pages/Preparation.xaml
@@ -8,6 +8,7 @@
     xmlns:local="using:PackageInstaller.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:reactiveUi="using:ReactiveUI"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
     <StackPanel Orientation="Vertical">
         <Grid Padding="0,0,15,0">
