--- a/Sextant.WinUI/NavigationView.xaml
+++ b/Sextant.WinUI/NavigationView.xaml
@@ -7,7 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Grid>
-        <Frame x:Name="mainFrame" />
+        <Frame x:Name="mainFrame" Background="Transparent" />
         <Button
             x:Name="backButton"
             VerticalAlignment="Top"
