--- a/PackageInstaller/PackageInstaller/App.xaml
+++ b/PackageInstaller/PackageInstaller/App.xaml
@@ -1,4 +1,4 @@
-﻿<hosting:CancelableApplication
+<hosting:CancelableApplication
     x:Class="PackageInstaller.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
