--- a/PackageInstaller/Pages/Result.xaml
+++ b/PackageInstaller/Pages/Result.xaml
@@ -1,4 +1,4 @@
-﻿<local:ReactivePageResult
+<local:ReactivePageResult
     x:Class="PackageInstaller.Pages.Result"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:PackageInstaller.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+>
     <controls:Grid Padding="40,0,40,40">
         <controls:Grid.ColumnDefinitions>
             <controls:ColumnDefinition Width="*" />
@@ -18,10 +19,7 @@
             <controls:RowDefinition Height="Auto" />
         </controls:Grid.RowDefinitions>
         <controls:TextBlock controls:Grid.Column="0" TextWrapping="Wrap">
-            <Run
-                x:Name="Title"
-                FontSize="24"
-                FontWeight="Bold" />
+            <Run x:Name="Title" FontSize="24" FontWeight="Bold" />
             <LineBreak />
             <Run x:Name="Description" />
         </controls:TextBlock>
@@ -34,19 +32,17 @@
             controls:Grid.Column="0"
             controls:Grid.Row="1"
             HorizontalScrollBarVisibility="Auto"
-            VerticalScrollBarVisibility="Auto">
-            <controls:TextBlock
-                x:Name="Details"
-                FontFamily="Courier New"
-                FontSize="10"
-                TextWrapping="NoWrap" />
+            VerticalScrollBarVisibility="Auto"
+        >
+            <controls:TextBlock x:Name="Details" FontFamily="Courier New" FontSize="10" TextWrapping="NoWrap" />
         </controls:ScrollViewer>
         <controls:Image
             x:Name="Icon"
             MaxWidth="100"
             VerticalAlignment="Top"
             controls:Grid.Column="1"
-            controls:Grid.Row="0" />
+            controls:Grid.Row="0"
+        />
 
         <controls:StackPanel
             HorizontalAlignment="Right"
@@ -54,12 +50,9 @@
             controls:Grid.ColumnSpan="2"
             controls:Grid.Row="2"
             Orientation="Horizontal"
-            Spacing="5">
-            <controls:Button
-                x:Name="ToggleDetails"
-                VerticalAlignment="Top"
-                Content="Show details"
-                IsEnabled="True" />
+            Spacing="5"
+        >
+            <controls:Button x:Name="ToggleDetails" VerticalAlignment="Top" Content="Show details" IsEnabled="True" />
             <controls:Button x:Name="Button" Content="Close" />
         </controls:StackPanel>
     </controls:Grid>
