--- a/PackageInstaller/MainWindow.xaml
+++ b/PackageInstaller/MainWindow.xaml
@@ -1,116 +1,39 @@
 <xaml:DesktopWindow
-  x:Class="PackageInstaller.MainWindow"
-  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:controls="using:Microsoft.UI.Xaml.Controls"
-  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-  xmlns:local="using:PackageInstaller"
-  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-  xmlns:xaml="using:NativeInterop.Win32.Xaml"
-  Width="600"
-  Height="400"
-  Loaded="MainWindow_OnActivated"
-  RequestedTheme="Auto"
-  Resizeable="False"
-  mc:Ignorable="d"
+    x:Class="PackageInstaller.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:Microsoft.UI.Xaml.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:PackageInstaller"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:xaml="using:NativeInterop.Win32.Xaml"
+    Width="600"
+    Height="400"
+    Loaded="MainWindow_OnActivated"
+    RequestedTheme="Auto"
+    Resizeable="False"
+    SystemBackdropEnabled="True"
+    mc:Ignorable="d"
 >
-    <controls:Grid
-    HorizontalAlignment="Stretch"
-    VerticalAlignment="Stretch"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-  >
+    <controls:Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <controls:Grid.RowDefinitions>
-            <controls:RowDefinition Height="Auto" />
             <controls:RowDefinition Height="*" />
         </controls:Grid.RowDefinitions>
-        <controls:StackPanel
-      x:Name="TitleBar"
-      Height="30"
-      controls:Grid.Row="0"
-      Background="Transparent"
-      FlowDirection="RightToLeft"
-      Orientation="Horizontal"
-    >
-            <controls:Button
-        x:Name="CloseButton"
-        HorizontalAlignment="Right"
-        AutomationProperties.AutomationId="_CloseButton"
-        AutomationProperties.Name="Close"
-        Click="CloseButton_OnClick"
-        Content="M 0 0 L 10 10 M 10 0 L 0 10"
-        Style="{StaticResource WindowCaptionButton}"
-      >
-                <controls:Button.Resources>
-                    <ResourceDictionary>
-                        <ResourceDictionary.ThemeDictionaries>
-                            <ResourceDictionary x:Key="Light">
-                                <StaticResource
-                  x:Key="WindowCaptionButtonBackgroundPointerOver"
-                  ResourceKey="CloseButtonBackgroundPointerOver"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonBackgroundPressed"
-                  ResourceKey="CloseButtonBackgroundPressed"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonStrokePointerOver"
-                  ResourceKey="CloseButtonStrokePointerOver"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonStrokePressed"
-                  ResourceKey="CloseButtonStrokePressed"
-                />
-                            </ResourceDictionary>
-                            <ResourceDictionary x:Key="Dark">
-                                <StaticResource
-                  x:Key="WindowCaptionButtonBackgroundPointerOver"
-                  ResourceKey="CloseButtonBackgroundPointerOver"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonBackgroundPressed"
-                  ResourceKey="CloseButtonBackgroundPressed"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonStrokePointerOver"
-                  ResourceKey="CloseButtonStrokePointerOver"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonStrokePressed"
-                  ResourceKey="CloseButtonStrokePressed"
-                />
-                            </ResourceDictionary>
-                            <ResourceDictionary x:Key="HighContrast">
-                                <StaticResource
-                  x:Key="WindowCaptionButtonBackgroundPointerOver"
-                  ResourceKey="CloseButtonBackgroundPointerOver"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonBackgroundPressed"
-                  ResourceKey="CloseButtonBackgroundPressed"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonStrokePointerOver"
-                  ResourceKey="CloseButtonStrokePointerOver"
-                />
-                                <StaticResource
-                  x:Key="WindowCaptionButtonStrokePressed"
-                  ResourceKey="CloseButtonStrokePressed"
-                />
-                            </ResourceDictionary>
-                        </ResourceDictionary.ThemeDictionaries>
-                    </ResourceDictionary>
-                </controls:Button.Resources>
-            </controls:Button>
-        </controls:StackPanel>
+        <controls:Grid
+            Background="Transparent"
+            VerticalAlignment="Top"
+            x:Name="DummyTitleBar"
+            Height="32"
+            controls:Grid.Row="0"
+        />
         <controls:ContentControl
-      x:Name="ContentControl"
-      HorizontalAlignment="Stretch"
-      VerticalAlignment="Stretch"
-      HorizontalContentAlignment="Stretch"
-      VerticalContentAlignment="Stretch"
-      controls:Grid.Row="1"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
-    />
+            x:Name="ContentControl"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            HorizontalContentAlignment="Stretch"
+            VerticalContentAlignment="Stretch"
+            controls:Grid.Row="0"
+            Background="Transparent"
+        />
     </controls:Grid>
-
 </xaml:DesktopWindow>
