--- a/PackageInstaller/Pages/Error.xaml
+++ b/PackageInstaller/Pages/Error.xaml
@@ -1,4 +1,4 @@
-﻿<local:ReactivePageError
+<local:ReactivePageError
     x:Class="PackageInstaller.Pages.Error"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,9 +6,9 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:PackageInstaller.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
-
-    <controls:Grid Padding="40" Background="DarkRed">
+    mc:Ignorable="d"
+>
+    <controls:Grid Padding="40">
         <controls:Grid.ColumnDefinitions>
             <controls:ColumnDefinition Width="*" />
             <controls:ColumnDefinition Width="Auto" />
@@ -19,13 +19,9 @@
             <controls:RowDefinition Height="Auto" />
         </controls:Grid.RowDefinitions>
         <controls:TextBlock controls:Grid.Column="0" TextWrapping="Wrap">
-            <Run
-                x:Name="Title"
-                FontSize="24"
-                FontWeight="Bold"
-                Foreground="White" />
+            <Run x:Name="Title" FontSize="24" FontWeight="Bold" />
             <LineBreak />
-            <Run x:Name="Description" Foreground="#ffcccb" />
+            <Run x:Name="Description" />
         </controls:TextBlock>
 
         <controls:ScrollViewer
@@ -34,11 +30,9 @@
             controls:Grid.Column="0"
             controls:Grid.Row="1"
             HorizontalScrollBarVisibility="Auto"
-            VerticalScrollBarVisibility="Auto">
-            <controls:TextBlock
-                x:Name="ErrorDetails"
-                FontFamily="Courier New"
-                TextWrapping="NoWrap" />
+            VerticalScrollBarVisibility="Auto"
+        >
+            <controls:TextBlock x:Name="ErrorDetails" FontFamily="Courier New" TextWrapping="NoWrap" />
         </controls:ScrollViewer>
         <controls:Image
             MaxWidth="100"
@@ -46,7 +40,8 @@
             VerticalAlignment="Top"
             controls:Grid.Column="1"
             controls:Grid.Row="0"
-            Source="ms-appx:///Assets/error.png" />
+            Source="ms-appx:///Assets/error.png"
+        />
 
         <controls:StackPanel
             HorizontalAlignment="Right"
@@ -54,12 +49,14 @@
             controls:Grid.ColumnSpan="2"
             controls:Grid.Row="2"
             Orientation="Horizontal"
-            Spacing="5">
+            Spacing="5"
+        >
             <controls:Button
                 x:Name="ToggleErrorDetails"
                 VerticalAlignment="Top"
                 Content="Show details"
-                IsEnabled="True" />
+                IsEnabled="True"
+            />
             <controls:Button x:Name="Button" Content="Close" />
         </controls:StackPanel>
     </controls:Grid>
